--- a/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
+++ b/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
@@ -1,10 +1,19 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Modules\Vaultex.Database\Vaultex.Database.csproj" />
+    <ProjectReference Include="..\Modules\Vaultex.Service.Shared\Vaultex.Service.Shared.csproj" />
+    <ProjectReference Include="..\Vaultex.Configuration\Vaultex.Configuration.csproj" />
+  </ItemGroup>
 
 </Project>
