--- a/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
+++ b/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
@@ -13,6 +13,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Modules\Vaultex.Database\Vaultex.Database.csproj" />
     <ProjectReference Include="..\Modules\Vaultex.Service.Shared\Vaultex.Service.Shared.csproj" />
+    <ProjectReference Include="..\Modules\Vaultex.Settings\Vaultex.Settings.csproj" />
+    <ProjectReference Include="..\Vaultex.Configuration.Client\Vaultex.Configuration.Client.csproj" />
     <ProjectReference Include="..\Vaultex.Configuration\Vaultex.Configuration.csproj" />
   </ItemGroup>
 
