--- a/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
+++ b/Vaultex.Configuration.Service/Vaultex.Configuration.Service.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Worker">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,11 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modules\Vaultex.Configuration\Vaultex.Configuration.csproj" />
     <ProjectReference Include="..\Modules\Vaultex.Database\Vaultex.Database.csproj" />
     <ProjectReference Include="..\Modules\Vaultex.Service.Shared\Vaultex.Service.Shared.csproj" />
     <ProjectReference Include="..\Modules\Vaultex.Settings\Vaultex.Settings.csproj" />
     <ProjectReference Include="..\Vaultex.Configuration.Client\Vaultex.Configuration.Client.csproj" />
-    <ProjectReference Include="..\Vaultex.Configuration\Vaultex.Configuration.csproj" />
   </ItemGroup>
 
 </Project>
