use repository in setting client

--- a/Vaultex.Configuration.Client/Vaultex.Configuration.Client.csproj
+++ b/Vaultex.Configuration.Client/Vaultex.Configuration.Client.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Modules\Vaultex.Configuration\Vaultex.Configuration.csproj" />
+    <ProjectReference Include="..\Modules\Vaultex.Repositories\Vaultex.Repositories.csproj" />
     <ProjectReference Include="..\Modules\Vaultex.Settings\Vaultex.Settings.csproj" />
   </ItemGroup>
 
